--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,8 +1,2 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Online Exam System</a>
-    </div>
-  </div>
-</nav>
-<login></login>
+
+<router-outlet></router-outlet>
